# case-analytics-engineer

./: .gitignore
results/: .env.template  ReadMe.md  Taskfile.yaml  docker-compose.yaml
results/dbt/: Dockerfile  pyproject.toml
results/dbt/feldm/: .gitignore  .user.yml  dbt_project.yml  packages.yml  profiles.yml
results/dbt/feldm/docs/: column_definitions.md  dim_customers.md  dm_customer_cohort.md  fct_sales.md
results/dbt/feldm/macros/: generate_schema_name.sql
results/dbt/feldm/models/marts/: dim_customers.sql  dim_dates.sql  dm_customer_cohort.sql  fct_sales.sql  marts.yml
results/dbt/feldm/models/staging/: staging.yml  stg_categories.sql  stg_customers.sql  stg_employees.sql  stg_order_details.sql  stg_orders.sql  stg_products.sql  stg_shippers.sql
results/sqlite-migrator/: Dockerfile
